nullaway_error_E8AE4593-9B33-4FA4-9C23-489C06CBDEB7.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-context/src/main/java/org/springframework/format/datetime/standard/DateTimeFormatterRegistrar.java:84: error: [NullAway] dereferenced expression this.factories.get(Type.DATE) is @Nullable
		this.factories.get(Type.DATE).setIso(useIsoFormat ? ISO.DATE : ISO.NONE);
		                             ^
    (see http://t.uber.com/nullaway )
